--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #002244, #003366);
+      background: linear-gradient(to bottom, #001933, #004080);
       color: white;
     }
     header {
@@ -16,7 +16,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 20px;
-      background-color: #001f3f;
+      background-color: #001a33;
     }
     .logo {
       font-size: 1.8rem;
@@ -58,7 +58,7 @@
       background-color: gray;
       cursor: not-allowed;
     }
-    #paymentModal {
+    #paymentModal, #processingModal {
       display: none;
       position: fixed;
       top: 0;
@@ -82,6 +82,15 @@
       padding: 10px;
       margin: 10px 0;
     }
+    .tasks {
+      margin-top: 10px;
+    }
+    .task-link {
+      display: block;
+      color: lightgreen;
+      margin-top: 5px;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -96,36 +105,61 @@
         <img src="https://img.icons8.com/clouds/100/000000/internship.png" />
         <h3>Intern</h3>
         <p>No Payment – 2 apps daily for 3 days<br />KES 200/day</p>
+        <div class="tasks">
+          <a class="task-link" href="https://apkpure.com/facebook-lite/com.facebook.lite">Download Facebook Lite</a>
+          <a class="task-link" href="https://apkpure.com/whatsapp/com.whatsapp">Download WhatsApp</a>
+        </div>
         <button class="btn">Start</button>
       </div>
+
       <div class="package">
         <img src="https://img.icons8.com/ios-filled/100/ffd700/mining-cart.png" />
         <h3>Silver - KES 2,000</h3>
-        <p>2 apps daily · KES 100 daily</p>
+        <p>2 apps daily · KES 100/day for 365 days</p>
+        <div class="tasks">
+          <a class="task-link" href="#">Cloud App 1</a>
+          <a class="task-link" href="#">Cloud App 2</a>
+        </div>
         <button class="btn" onclick="openPayment()">Purchase</button>
       </div>
+
       <div class="package">
         <img src="https://img.icons8.com/ios-filled/100/ffd700/gold-bar.png" />
         <h3>Gold - KES 4,800</h3>
-        <p>3 apps daily · KES 250 daily</p>
+        <p>3 apps daily · KES 250/day</p>
+        <div class="tasks">
+          <a class="task-link" href="#">Cloud App 1</a>
+          <a class="task-link" href="#">Cloud App 2</a>
+          <a class="task-link" href="#">Cloud App 3</a>
+        </div>
         <button class="btn" onclick="openPayment()">Purchase</button>
       </div>
+
       <div class="package">
         <img src="https://img.icons8.com/ios-filled/100/ffffff/diamond.png" />
         <h3>Diamond - KES 15,000</h3>
-        <p>5 apps daily · KES 700 daily</p>
+        <p>5 apps daily · KES 700/day</p>
+        <div class="tasks">
+          <a class="task-link" href="#">Cloud App 1</a>
+          <a class="task-link" href="#">Cloud App 2</a>
+          <a class="task-link" href="#">Cloud App 3</a>
+          <a class="task-link" href="#">Cloud App 4</a>
+          <a class="task-link" href="#">Cloud App 5</a>
+        </div>
         <button class="btn" onclick="openPayment()">Purchase</button>
       </div>
+
       <div class="package locked">
         <img src="https://img.icons8.com/ios-glyphs/90/lock.png" />
         <h3>Platinum - KES 30,000</h3>
-        <p>7 apps daily · KES 1,200 daily</p>
+        <p>7 apps daily · KES 1,200/day</p>
         <button class="btn" disabled>Locked</button>
       </div>
+
       <div class="package locked">
         <img src="https://img.icons8.com/ios-glyphs/90/lock.png" />
         <h3>Obsidian - KES 56,000</h3>
-        <p>10 apps daily · KES 3,000 daily</p>
+        <p>10 apps daily · KES 3,000/day</p>
         <button class="btn" disabled>Locked</button>
       </div>
     </div>
@@ -141,22 +175,47 @@
     </div>
   </div>
 
+  <div id="processingModal">
+    <div class="modal-content">
+      <h3>Processing...</h3>
+      <p>Please wait while we confirm your code.</p>
+    </div>
+  </div>
+
   <script>
     function openPayment() {
       document.getElementById("paymentModal").style.display = "flex";
     }
+
     function closePayment() {
       document.getElementById("paymentModal").style.display = "none";
     }
+
     function confirmPayment() {
-      const code = document.getElementById("mpesaCode").value;
-      if (code.trim() !== "") {
-        alert("Payment confirmed with code: " + code);
-        closePayment();
+      const code = document.getElementById("mpesaCode").value.trim();
+      if (code) {
+        document.getElementById("paymentModal").style.display = "none";
+        document.getElementById("processingModal").style.display = "flex";
+        setTimeout(() => {
+          document.getElementById("processingModal").style.display = "none";
+          alert("Payment confirmed with code: " + code);
+        }, 3000);
       } else {
         alert("Please enter your M-PESA code.");
       }
     }
+
+    // Daily reset logic (simulated)
+    const resetTasks = () => {
+      console.log("Tasks reset for the day at midnight.");
+    }
+    const now = new Date();
+    const midnight = new Date();
+    midnight.setHours(24, 0, 0, 0);
+    setTimeout(() => {
+      resetTasks();
+      setInterval(resetTasks, 86400000);
+    }, midnight - now);
   </script>
 </body>
 </html>
